# hw2

./: .gitattributes  .gitignore  AGENT.md  index.html  process.py  pyproject.toml
phase-1-classify/: feature-combined.ck  feature-extract.ck  x-validate.ck
phase-1-classify/data/: centroid_rms_flux.txt  centroid_rolloff.txt  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D  mfcc_chroma_rms.txt  result.txt  rms_zerox.txt  test.txt
phase-2-mosaic/: chugl.ck  demo_video.mov  jello.ck  mosaic-extract.ck  mosaic-similar-chugl.ck  mosaic-similar.ck  mosaic-synth-doh.ck  mosaic-synth-file.ck  mosaic-synth-mic.ck  mosaic-synth-osc-kb.ck  mosaic-synth-osc.ck  mosaic_db.txt  my_sounds.txt
phase-3-performance/: SPOTIFY-UI-SPEC.md  build_rap_db.py  clip_lyrics.txt  clip_lyrics_clean.txt  clip_metadata.json  crawl_podcasts.py  crawl_rap.py  deepfake-clips-clean.txt  deepfake-clips.txt  deepfake-diss.ck  deepfake_db.txt  deepfake_lyrics.txt  deepfake_lyrics_clean.txt  deepfake_metadata.json  download_videos.py  extract-rap-db.ck  filter_clean.py  generate_deepfakes.py  rap-clips-clean.txt  rap-clips.txt  rap_db.txt  realign_lyrics.py
phase-3-performance/podcast_videos/: podcast_nbc.mpg  podcast_ted.mpg  podcast_vice.mpg  podcast_vox.mpg
phase-3-performance/rap_videos/: 000_Kendrick_Lamar_HUMBLE.mpg  001_Kendrick_Lamar_DNA.mpg  003_Kendrick_Lamar_Not_Like_Us.mpg  004_Drake_Gods_Plan.mpg  005_Drake_Started_From_The_Bottom.mpg  008_J_Cole_Middle_Child.mpg  010_Travis_Scott_SICKO_MODE.mpg  011_Travis_Scott_goosebumps.mpg  (+12 more)
(+75 files in other folders)
